fix: add white space

--- a/src/shared/ui/BaseTab/base-tab.scss
+++ b/src/shared/ui/BaseTab/base-tab.scss
@@ -30,6 +30,7 @@
 .tab__title {
   @include font(18px, 600, 26px);
   text-wrap: nowrap;
+  white-space: nowrap;
   text-transform: capitalize;
 }
 
